# directory-frontend

./: CMakeLists.txt  README.md  main.cpp  vcpkg.json
libs/webview/: webview.h
